--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,6 +1,26 @@
 appId: com.invoice.el
 productName: Invoice Generator
 copyright: Copyright © 2021 Badar
+
+win:
+  icon: "resources/icon.ico"
+  target:
+    - "zip"
+    - "nsis"
+
+# Config for the windows installer
+nsis:
+  oneClick: true
+  perMachine: true
+
+# Linux configuration
+linux:
+  icon: "resources/icon.ico"
+  category: Development
+  target:
+    - "AppImage"
+    - "deb"
+    
 directories:
   output: dist
   buildResources: resources
