--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
+    "lint": "nextron lint",
     "build": "nextron build",
     "build:all": "nextron build --all",
     "build:win32": "nextron build --win --ia32",
@@ -16,26 +17,30 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "electron-serve": "^1.1.0",
-    "electron-store": "^8.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.0",
     "electron-is-dev": "^2.0.0",
+    "electron-serve": "^1.1.0",
+    "electron-store": "^8.0.1",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.3.2",
     "jspdf": "^2.3.1",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-icons": "^4.2.0",
-
     "react-to-print": "^2.14.7",
     "web-vitals": "^1.1.2"
-
   },
   "devDependencies": {
     "electron": "^18.2.0",
     "electron-builder": "^23.0.3",
+    "eslint": "^8.0.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1",
     "next": "^12.1.6",
     "nextron": "^8.1.0",
     "react": "^18.1.0",
