--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "invoice",
-  "description": "Invoice Genratir",
+  "description": "Invoice Genrator",
   "version": "1.0.0",
   "author": "Badar <badardani11@gmail.com>",
   "main": "app/background.js",
@@ -28,6 +28,7 @@
     "html2canvas": "^1.3.2",
     "jspdf": "^2.3.1",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap-typeahead": "^6.0.0-rc.3",
     "react-icons": "^4.2.0",
     "react-to-print": "^2.14.7",
     "web-vitals": "^1.1.2"
